--- a/0_Pages/0_testvarios/Test/DIPr test.html
+++ b/0_Pages/0_testvarios/Test/DIPr test.html
@@ -859,6 +859,46 @@ options: ["Sí, mientras el instrumento jurídico establezca su aplicación univ
 { question: "AIKAS, una empresa marroquí domiciliada en Ca-sablanca (Marruecos), vende cuatro millones de toneladas de fertilizante a una distribuidora suiza con sede en Berna (Suiza). El contrato de compra-venta contiene una cláusula de sumisión a tribuna-les españoles, en tanto que foro neutral. Tras unos análisis en un laboratorio suizo, la empresa distri-buidora suiza concluye que el fertilizante no es apto para ser comercializado. AIKAS entiende que se le adeuda íntegramente la cantidad estipulada en el contrato. Por su parte, la distribuidora suiza entiende que se le debe una indemnización de da-ños y perjuicios. AIKAS presenta la correspondien-te demanda ante los tribunales españoles. La em-presa suiza se persona y excepciona la competen-cia, por entender que no está vinculada a la cláusu-la de sumisión a los tribunales españoles. La cues-tión que se plantea es: ¿qué norma tendrá que aplicar el juez español para determinar si la cláusu-la de sumisión a tribunales españoles es válida?", options: ["Será de aplicación el artículo 22 bis 2 de la LOPJ, pues como las partes no están domiciliadas en la UE, no puede aplicarse ningún Reglamento euro-peo.", "Será de aplicación el Reglamento Bruselas I refun-dido, pues, para esta cuestión en concreto, basta con que la sumisión se haga a los tribunales de un Estado miembro, con independencia de la residen-cia de las partes. ", "En la medida en que el demandado reside en Sui-za, no es aplicable el Reglamento Bruselas I refun-dido, sino el Convenio de Lugano. ", "En la medida de que el demandado reside en Sui-za y el Convenio de Lugano establece que deberán inhibirse, deberá aplicarse el foro de necesidad, tal y como lo recoge la LOPJ."], answer: 1 },
 
 
+    { question: "¿Qué artículo del Reglamento 2019/1111 se refiere a las medidas provisionales y cautelares?", options: ["Artículo 15", "Artículo 16", "Artículo 17", "Artículo 18"], answer: 0 },
+    { question: "¿Qué tipo de efectos tienen las medidas provisionales y cautelares adoptadas en virtud del artículo 15 del Reglamento 2019/1111?", options: ["Efectos extraterritoriales", "Efectos intraterritoriales", "Efectos internacionales", "Efectos nacionales"], answer: 0 },
+    { question: "¿Qué excepción se aplica a los efectos de las medidas provisionales y cautelares adoptadas en virtud del artículo 15 del Reglamento 2019/1111?", options: ["Casos de sustracción internacional de menores", "Casos de violencia doméstica", "Casos de fraude internacional", "Casos de evasión fiscal"], answer: 0 },
+    { question: "Según el artículo 18, ¿qué órgano jurisdiccional se declara incompetente de oficio cuando se inicie un procedimiento ante un órgano jurisdiccional de otro Estado miembro que sea competente en virtud del Reglamento?", options: ["El órgano jurisdiccional del Estado miembro donde se presentó la primera demanda", "El órgano jurisdiccional del Estado miembro donde se presentó la segunda demanda", "Ambos órganos jurisdiccionales", "Ninguno de los órganos jurisdiccionales"], answer: 1 },
+    { question: "¿Qué artículo del Reglamento (CE) n.o 1393/2007 se aplicará en lugar de las directrices genéricas del Reglamento 1215/2012?", options: ["Artículo 15", "Artículo 18", "Artículo 19", "Artículo 20"], answer: 2 },
+    { question: "¿Qué artículo del Reglamento 2019/1111 se refiere a la litispendencia y las acciones dependientes?", options: ["Artículo 18", "Artículo 19", "Artículo 20", "Artículo 21"], answer: 2 },
+    { question: "¿Qué se requiere para que se dé una situación de litispendencia según el artículo 20 del Reglamento 2019/1111?", options: ["Identidad de partes", "Identidad de objeto y causa", "Identidad de procedimiento", "Todas las anteriores"], answer: 0 },
+    { question: "¿Qué artículo del Reglamento 2019/1111 establece una regla para determinar qué órgano jurisdiccional conoce en primer lugar?", options: ["Artículo 15", "Artículo 17", "Artículo 19", "Artículo 20"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se refiere a la competencia judicial internacional?", options: ["Artículo 22", "Artículo 22 bis", "Artículo 22 ter", "Todos los anteriores"], answer: 3 },
+    { question: "¿Cuándo son competentes los Juzgados y Tribunales españoles según el artículo 22 ter LOPJ?", options: ["Cuando el demandante tenga su domicilio en España", "Cuando el demandado tenga su domicilio en España", "Cuando ambas partes tengan su domicilio en España", "Cuando ninguna de las partes tenga su domicilio en España"], answer: 1 },
+    { question: "¿En qué ámbito es susceptible de aplicación el foro del domicilio del demandado según el artículo 22 ter LOPJ?", options: ["Jurisdicción contenciosa", "Jurisdicción voluntaria", "Jurisdicción penal", "Jurisdicción administrativa"], answer: 0 },
+    { question: "¿En qué se fundamenta la competencia judicial internacional por la presencia del domicilio del demandado en España según el artículo 22 ter LOPJ?", options: ["Reglamentos UE", "Convenios internacionales", "LOPJ", "Todas las anteriores"], answer: 0 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para excluir la competencia de los tribunales españoles en favor de tribunales extranjeros?", options: ["Artículo 22", "Artículo 22 bis", "Artículo 22 quáter", "Artículo 22 quinquies"], answer: 2 },
+    { question: "¿Qué artículo de la LOPJ se aplica para fundamentar la competencia judicial internacional en defecto de Reglamento UE o Convenio internacional aplicables?", options: ["Artículo 22", "Artículo 22 bis", "Artículo 22 ter", "Todos los anteriores"], answer: 3 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para los acuerdos de sumisión que excluyen la competencia de los tribunales españoles?", options: ["Artículo 25", "Artículo 26", "Ambos", "Ninguno de los anteriores"], answer: 0 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para los acuerdos de sumisión que atribuyen competencia a los tribunales españoles?", options: ["Artículo 25", "Artículo 26", "Ambos", "Ninguno de los anteriores"], answer: 1 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para los foros especiales que permiten los acuerdos de sumisión?", options: ["Artículo 10", "Artículo 15", "Artículo 20", "Artículo 25"], answer: 0 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para los foros de competencia judicial internacional establecida con arreglo al foro del domicilio del demandado?", options: ["Artículo 22", "Artículo 22 bis", "Artículo 22 ter", "Artículo 22 quáter"], answer: 2 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para los foros de competencia judicial internacional que pueden ser excluidos en virtud de un acuerdo de sumisión?", options: ["Artículo 22 quáter", "Artículo 22 quinquies", "Ambos", "Ninguno de los anteriores"], answer: 0 },
+
+
+    { question: "¿Qué artículo de la LOPJ incorpora una definición de domicilio?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica cuando el demandado está domiciliado en un Estado miembro?", options: ["Artículo 4", "Artículo 7", "Artículo 8", "Artículo 9"], answer: 0 },
+    { question: "¿Qué artículo de la LOPJ se aplica cuando el demandado está domiciliado en un tercer país?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se refiere a la competencia judicial internacional para adoptar medidas provisionales y cautelares?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 sexies"], answer: 3 },
+    { question: "¿Qué artículo de la LOPJ se aplica para fundamentar la competencia judicial internacional en defecto de Reglamento UE o Convenio internacional aplicables?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 0 },
+    { question: "¿Qué artículo de la LOPJ se refiere al control de la competencia judicial internacional?", options: ["Artículo 38", "Artículo 39", "Artículo 40", "Artículo 41"], answer: 0 },
+    { question: "¿Qué artículo de la LEC se refiere a la competencia judicial internacional que puede controlarse a instancia de parte?", options: ["Artículo 38", "Artículo 39", "Artículo 63", "Artículo 65"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ incorpora el foro de necesidad?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 octies"], answer: 3 },
+    { question: "¿En qué artículo de la LOPJ se establece que los tribunales españoles no podrán abstenerse o declinar su competencia cuando el supuesto litigioso presente vinculación con España y los Tribunales de los distintos Estados conectados con el supuesto hayan declinado su competencia?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 octies"], answer: 3 },
+    { question: "¿Qué artículo de la LOPJ se aplica para la comprobación de la competencia judicial internacional en el momento de la presentación de la demanda?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 octies"], answer: 3 },
+    { question: "¿Qué artículo del Reglamento 1215/2012 se aplica para los foros especiales?", options: ["Artículo 4", "Artículo 7", "Artículo 8", "Artículo 9"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros especiales en defecto de Reglamento UE o Convenio internacional aplicables?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 0 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional establecida con arreglo al foro del domicilio del demandado?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional que pueden ser excluidos en virtud de un acuerdo de sumisión?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 3 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional que pueden ser atribuidos en virtud de un acuerdo de sumisión?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional que pueden ser atribuidos en virtud de un acuerdo de sumisión expresa o tácita?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional que pueden ser atribuidos en virtud de un acuerdo de sumisión expresa?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional que pueden ser atribuidos en virtud de un acuerdo de sumisión tácita?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
+    { question: "¿Qué artículo de la LOPJ se aplica para los foros de competencia judicial internacional que pueden ser atribuidos en virtud de un acuerdo de sumisión y que pueden controlarse a instancia de parte?", options: ["Artículo 22", "Artículo 22 ter", "Artículo 22 bis", "Artículo 22 quater"], answer: 1 },
 
 
 
@@ -1090,6 +1130,32 @@ window.onbeforeprint = function() {
 };
 
 </script>
+<p>Modelo: <i id="numero-aleatorio"></i></p>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Obtener fecha y hora actual
+      const fecha = new Date();
+      const dia = fecha.getDate();
+      const mes = fecha.getMonth() + 1;
+      const año = fecha.getFullYear();
+      const minuto = fecha.getMinutes();
 
+      // Generar número aleatorio
+      const numeroAleatorio = Math.floor(Math.random() * 10000) + 1;
+
+      // Calcular resultado final
+      const resultado = (dia + mes + año) * (numeroAleatorio + minuto);
+
+      // Obtener los últimos 4 dígitos
+      const numeroFinal = resultado.toString().slice(-4);
+
+      // Mostrar el número en la página
+      const elementoNumeroAleatorio = document.getElementById("numero-aleatorio");
+      elementoNumeroAleatorio.textContent = numeroFinal;
+
+      // Centrar el texto
+      elementoNumeroAleatorio.style.textAlign = "center";
+    });
+  </script>
 </body>
 </html>
